fix: correct alignment in topbar and update logo background color

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,7 +55,7 @@ img {
 
 .topbar {
   display: flex;
-  align-items: center;
+  align-items: spacce-between;
   justify-content: space-between;
   max-width: var(--content-width);
   margin: 0 auto;
@@ -75,7 +75,7 @@ img {
   height: 0.75rem;
   width: 0.75rem;
   border-radius: 50%;
-  background: #fff;
+  background: #043cf5;
   display: inline-block;
 }
 
